--- a/absensi_karyawan_kasir_bg.html
+++ b/absensi_karyawan_kasir_bg.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -11,36 +10,38 @@
       margin: 0;
       padding: 40px 20px;
       background: url('https://images.unsplash.com/photo-1503264116251-35a269479413?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80') no-repeat center center fixed;
-  background-size: cover;
+      background-size: cover;
       color: #fff;
       overflow-x: hidden;
     }
+    /* Naga Mahjong animasi berjalan dan mengapung */
     .dragon-bg {
       position: fixed;
-      top: 0;
+      bottom: 0;
       left: -100%;
-      width: 200%;
-      height: 100%;
-      background: url('https://i.ibb.co/k62mH7W/dragon-walking.gif') repeat-x;
+      width: 300%;
+      height: 300px;
+      background: url('https://i.ibb.co/3f03Z0k/mahjong-dragon.gif') repeat-x;
       background-size: contain;
-      animation: moveDragon 60s linear infinite;
+      animation:
+        moveDragon 60s linear infinite,
+        floatUpDown 4s ease-in-out infinite;
       z-index: -1;
-      opacity: 0.1;
+      opacity: 0.25;
+      pointer-events: none;
     }
     @keyframes moveDragon {
       from { left: -100%; }
-      to { left: 0%; }
+      to   { left: 0%; }
     }
-    h1 {
-      text-align: center;
-      margin-bottom: 30px;
-      font-size: 2rem;
-      text-shadow: 1px 1px 4px #000;
+    @keyframes floatUpDown {
+      0%, 100% { transform: translateY(0); }
+      50%       { transform: translateY(-20px); }
     }
+    h1 { text-align: center; margin-bottom: 30px; font-size: 2rem; text-shadow: 1px 1px 4px #000; }
     form, table {
       margin: 0 auto;
-      width: 100%;
-      max-width: 650px;
+      width: 100%; max-width: 650px;
       backdrop-filter: blur(10px);
       background: rgba(0, 0, 0, 0.5);
       padding: 30px;
@@ -62,10 +63,7 @@
       border: none;
       transition: all 0.3s ease;
     }
-    button:hover {
-      background-color: #00B89F;
-      box-shadow: 0 0 20px #00C9A7;
-    }
+    button:hover { background-color: #00B89F; box-shadow: 0 0 20px #00C9A7; }
     table {
       margin-top: 30px;
       border-collapse: collapse;
@@ -79,12 +77,8 @@
       text-align: center;
       background: rgba(255, 255, 255, 0.1);
     }
-    th {
-      background-color: rgba(76, 175, 80, 0.8);
-    }
-    tr:hover {
-      background-color: rgba(255, 255, 255, 0.2);
-    }
+    th { background-color: rgba(76, 175, 80, 0.8); }
+    tr:hover { background-color: rgba(255, 255, 255, 0.2); }
     #downloadBtn {
       display: block;
       margin: 20px auto 10px auto;
@@ -127,9 +121,7 @@
         <th>Waktu Pulang</th>
       </tr>
     </thead>
-    <tbody>
-      <!-- Data absensi akan muncul di sini -->
-    </tbody>
+    <tbody></tbody>
   </table>
 
   <script>
@@ -139,18 +131,16 @@
     const pulangBtn = document.getElementById('pulangBtn');
     let lastRow = null;
 
-    form.addEventListener('submit', function(e) {
+    form.addEventListener('submit', e => {
       e.preventDefault();
       const nama = document.getElementById('nama').value.trim();
       const nik = document.getElementById('nik').value.trim();
       const status = document.getElementById('status').value;
-      const waktuMasuk = new Date().toLocaleString('id-ID');
-
       if (!nama || !nik || /^\d+$/.test(nama)) {
         alert('Nama atau NIK tidak valid!');
         return;
       }
-
+      const waktuMasuk = new Date().toLocaleString('id-ID');
       const row = document.createElement('tr');
       row.innerHTML = `
         <td>${nama}</td>
@@ -165,32 +155,25 @@
       alert('Data absen masuk berhasil ditambahkan!');
     });
 
-    pulangBtn.addEventListener('click', function() {
-      if(lastRow){
-        const waktuPulang = new Date().toLocaleString('id-ID');
-        lastRow.cells[4].innerText = waktuPulang;
+    pulangBtn.addEventListener('click', () => {
+      if (lastRow) {
+        lastRow.cells[4].innerText = new Date().toLocaleString('id-ID');
         alert('Absen pulang berhasil dicatat!');
-      } else {
-        alert('Belum ada data absen masuk!');
-      }
+      } else alert('Belum ada data absen masuk!');
     });
 
-    downloadBtn.addEventListener('click', function () {
-      if(confirm("Yakin ingin mendownload data absensi?")){
+    downloadBtn.addEventListener('click', () => {
+      if (confirm("Yakin ingin mendownload data absensi?")) {
         let csv = 'Nama,NIK,Waktu Masuk,Status,Waktu Pulang\n';
-        const rows = document.querySelectorAll('table tr');
-        rows.forEach(row => {
+        document.querySelectorAll('table tr').forEach(row => {
           const cols = row.querySelectorAll('td, th');
-          const rowData = [];
-          cols.forEach(col => rowData.push(col.innerText));
-          csv += rowData.join(',') + '\n';
+          csv += Array.from(cols).map(c => c.innerText).join(',') + '\n';
         });
-
-        const hiddenElement = document.createElement('a');
-        hiddenElement.href = 'data:text/csv;charset=utf-8,' + encodeURI(csv);
-        hiddenElement.target = '_blank';
-        hiddenElement.download = 'data_absensi.csv';
-        hiddenElement.click();
+        const a = document.createElement('a');
+        a.href = 'data:text/csv;charset=utf-8,' + encodeURI(csv);
+        a.target = '_blank';
+        a.download = 'data_absensi.csv';
+        a.click();
       }
     });
   </script>
