--- a/absensi_karyawan_kasir_bg.html
+++ b/absensi_karyawan_kasir_bg.html
@@ -14,7 +14,6 @@
       color: #fff;
       overflow-x: hidden;
     }
-    /* Naga Mahjong animasi berjalan dan mengapung */
     .dragon-bg {
       position: fixed;
       bottom: 0;
@@ -23,9 +22,7 @@
       height: 300px;
       background: url('https://i.ibb.co/3f03Z0k/mahjong-dragon.gif') repeat-x;
       background-size: contain;
-      animation:
-        moveDragon 60s linear infinite,
-        floatUpDown 4s ease-in-out infinite;
+      animation: moveDragon 60s linear infinite, floatUpDown 4s ease-in-out infinite;
       z-index: -1;
       opacity: 0.25;
       pointer-events: none;
@@ -38,15 +35,16 @@
       0%, 100% { transform: translateY(0); }
       50%       { transform: translateY(-20px); }
     }
-    h1 { text-align: center; margin-bottom: 30px; font-size: 2rem; text-shadow: 1px 1px 4px #000; }
+    h1 { text-align: center; margin-bottom: 20px; font-size: 2rem; text-shadow: 1px 1px 4px #000; }
     form, table {
       margin: 0 auto;
-      width: 100%; max-width: 650px;
+      width: 100%; max-width: 700px;
       backdrop-filter: blur(10px);
-      background: rgba(0, 0, 0, 0.5);
-      padding: 30px;
+      background: rgba(0, 0, 0, 0.6);
+      padding: 20px;
       border-radius: 15px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.5);
+      margin-bottom: 20px;
     }
     input, select, button {
       width: 100%;
@@ -56,7 +54,7 @@
       border: 1px solid #ccc;
       font-size: 1rem;
     }
-    button[type="submit"], #downloadBtn, #pulangBtn {
+    button[type="submit"], #downloadBtn {
       background-color: #00C9A7;
       box-shadow: 0 0 10px #00C9A7;
       color: white;
@@ -65,7 +63,6 @@
     }
     button:hover { background-color: #00B89F; box-shadow: 0 0 20px #00C9A7; }
     table {
-      margin-top: 30px;
       border-collapse: collapse;
       width: 100%;
       border-radius: 15px;
@@ -76,12 +73,15 @@
       border: 1px solid #ddd;
       text-align: center;
       background: rgba(255, 255, 255, 0.1);
+      color: #fff;
     }
     th { background-color: rgba(76, 175, 80, 0.8); }
     tr:hover { background-color: rgba(255, 255, 255, 0.2); }
+    .status-hijau { color: #2ecc71; font-weight: bold; }
+    .status-merah { color: #e74c3c; font-weight: bold; }
     #downloadBtn {
       display: block;
-      margin: 20px auto 10px auto;
+      margin: 20px auto;
       padding: 12px 24px;
     }
   </style>
@@ -91,22 +91,37 @@
 
   <h1>ABSENSI KARYAWAN KASIR</h1>
 
+  <!-- Form pengaturan shift -->
+  <form id="shiftForm">
+    <h3>Atur Jam Batas Shift</h3>
+    <label>Batas Jam Masuk Shift Pagi:</label>
+    <input type="time" id="shiftPagi" value="08:00" required>
+    <label>Batas Jam Masuk Shift Siang:</label>
+    <input type="time" id="shiftSiang" value="16:00" required>
+    <label>Batas Jam Masuk Shift Malam:</label>
+    <input type="time" id="shiftMalam" value="22:00" required>
+    <button type="submit">Simpan Aturan Shift</button>
+  </form>
+
+  <!-- Form absen -->
   <form id="absenForm">
-    <label>Nama:</label>
+    <label>Nama Karyawan:</label>
     <input type="text" id="nama" placeholder="Masukkan Nama" required>
 
-    <label>NIK / ID:</label>
-    <input type="text" id="nik" placeholder="Masukkan NIK / ID" required>
+    <label>Divisi:</label>
+    <input type="text" id="divisi" placeholder="Masukkan Divisi" required>
 
-    <label>Keterangan:</label>
-    <select id="status">
-      <option value="Hadir">Hadir</option>
-      <option value="Izin">Izin</option>
-      <option value="Sakit">Sakit</option>
+    <label>Shift:</label>
+    <select id="shift" required>
+      <option value="Pagi">Pagi</option>
+      <option value="Siang">Siang</option>
+      <option value="Malam">Malam</option>
     </select>
 
+    <label>Jam Masuk:</label>
+    <input type="time" id="jamMasuk" required>
+
     <button type="submit">Submit Absen Masuk</button>
-    <button type="button" id="pulangBtn">Absen Pulang</button>
   </form>
 
   <button id="downloadBtn">Download ke Excel</button>
@@ -115,57 +130,79 @@
     <thead>
       <tr>
         <th>Nama</th>
-        <th>NIK</th>
-        <th>Waktu Masuk</th>
+        <th>Divisi</th>
+        <th>Shift</th>
+        <th>Jam Masuk</th>
+        <th>Tanggal</th>
         <th>Status</th>
-        <th>Waktu Pulang</th>
       </tr>
     </thead>
     <tbody></tbody>
   </table>
 
   <script>
-    const form = document.getElementById('absenForm');
+    const formAbsen = document.getElementById('absenForm');
+    const formShift = document.getElementById('shiftForm');
     const tableBody = document.querySelector('#absenTable tbody');
     const downloadBtn = document.getElementById('downloadBtn');
-    const pulangBtn = document.getElementById('pulangBtn');
-    let lastRow = null;
 
-    form.addEventListener('submit', e => {
+    // Default rules
+    let shiftRules = {
+      "Pagi": "08:00",
+      "Siang": "16:00",
+      "Malam": "22:00"
+    };
+
+    // Simpan aturan shift dari form pengaturan
+    formShift.addEventListener('submit', e => {
+      e.preventDefault();
+      shiftRules.Pagi = document.getElementById('shiftPagi').value;
+      shiftRules.Siang = document.getElementById('shiftSiang').value;
+      shiftRules.Malam = document.getElementById('shiftMalam').value;
+      alert("Aturan shift berhasil diperbarui!");
+    });
+
+    formAbsen.addEventListener('submit', e => {
       e.preventDefault();
       const nama = document.getElementById('nama').value.trim();
-      const nik = document.getElementById('nik').value.trim();
-      const status = document.getElementById('status').value;
-      if (!nama || !nik || /^\d+$/.test(nama)) {
-        alert('Nama atau NIK tidak valid!');
+      const divisi = document.getElementById('divisi').value.trim();
+      const shift = document.getElementById('shift').value;
+      const jamMasuk = document.getElementById('jamMasuk').value;
+      if (!nama || !divisi || !jamMasuk) {
+        alert('Harap lengkapi semua data!');
         return;
       }
-      const waktuMasuk = new Date().toLocaleString('id-ID');
+
+      const tanggal = new Date().toLocaleDateString('id-ID');
+      const batasShift = shiftRules[shift];
+      let statusText = '';
+      let statusClass = '';
+
+      if (jamMasuk > batasShift) {
+        statusText = 'Terlambat';
+        statusClass = 'status-merah';
+      } else {
+        statusText = 'Selamat Datang';
+        statusClass = 'status-hijau';
+      }
+
       const row = document.createElement('tr');
       row.innerHTML = `
         <td>${nama}</td>
-        <td>${nik}</td>
-        <td>${waktuMasuk}</td>
-        <td>${status}</td>
-        <td>-</td>
+        <td>${divisi}</td>
+        <td>${shift}</td>
+        <td>${jamMasuk}</td>
+        <td>${tanggal}</td>
+        <td class="${statusClass}">${statusText}</td>
       `;
       tableBody.appendChild(row);
-      lastRow = row;
-      form.reset();
-      alert('Data absen masuk berhasil ditambahkan!');
-    });
-
-    pulangBtn.addEventListener('click', () => {
-      if (lastRow) {
-        lastRow.cells[4].innerText = new Date().toLocaleString('id-ID');
-        alert('Absen pulang berhasil dicatat!');
-      } else alert('Belum ada data absen masuk!');
+      formAbsen.reset();
     });
 
     downloadBtn.addEventListener('click', () => {
       if (confirm("Yakin ingin mendownload data absensi?")) {
-        let csv = 'Nama,NIK,Waktu Masuk,Status,Waktu Pulang\n';
-        document.querySelectorAll('table tr').forEach(row => {
+        let csv = 'Nama,Divisi,Shift,Jam Masuk,Tanggal,Status\n';
+        document.querySelectorAll('#absenTable tr').forEach(row => {
           const cols = row.querySelectorAll('td, th');
           csv += Array.from(cols).map(c => c.innerText).join(',') + '\n';
         });
