--- a/index.html
+++ b/index.html
@@ -1213,6 +1213,7 @@
                 <table>
                     <thead>
                         <tr>
+                            <th>Nama</th>
                             <th>Tanggal</th>
                             <th>Aktivitas</th>
                             <th>Keterangan</th>
@@ -1493,4 +1494,5 @@
 
     </script>
 </body>
+
 </html>
